RESOLVED FIXED296156
[macOS] Fullscreen animation on YouTube.com is missing
https://bugs.webkit.org/show_bug.cgi?id=296156
Summary [macOS] Fullscreen animation on YouTube.com is missing
Jer Noble
Reported 2025-07-17 17:41:04 PDT
[macOS] Fullscreen animation on YouTube.com is missing
Attachments
Jer Noble
Comment 1 2025-07-17 17:41:06 PDT
Jer Noble
Comment 2 2025-07-17 17:47:03 PDT
EWS
Comment 3 2025-07-21 09:47:20 PDT
Committed 297687@main (baec4aed924e): <https://commits.webkit.org/297687@main> Reviewed commits have been landed. Closing PR #48215 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.