[macOS] Fullscreen animation on YouTube.com is missing rdar://155498665 https://bugs.webkit.org/show_bug.cgi?id=296156

Reviewed by Andy Estes.

In 296331@main, we tried to use a different mechanism to calculate the visual extents of the
element which was entering fullscreen, to account for overflow children of zero-height contents.
However, this caused issues on sites like weather.com and hulu.com, where this calculation lead
to buggy looking animations.

Instead, only use this more expansive screen rect calculation if element.screenRect() returns
an empty rect.

* LayoutTests/fullscreen/fullscreen-zero-height-element-with-non-zero-children-expected.txt: Added.
* LayoutTests/fullscreen/fullscreen-zero-height-element-with-non-zero-children.html: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
(WebKit::screenRectOfContents):
(WebKit::WebFullScreenManager::enterFullScreenForElement):
(WebKit::WebFullScreenManager::willEnterFullScreen):
(WebKit::WebFullScreenManager::willExitFullScreen):

Canonical link: https://commits.webkit.org/297687@main